--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,8 +8,10 @@ body{
 }
 .container{
     background-color: rgb(233, 75, 48);
-    width:100%;
-    height: 600px; 
+   
+width: 1350px;
+height: 500px;
+
     
 }
 .adjust{display: flex;
@@ -38,11 +40,59 @@ border-radius: 5px;}
     color: black;
 }
     
-
-
 .live-images{
     width:500px ;
     height:400px ;
     padding-left: 200px;
     padding-top: 100px;
 }
+.best-players{
+    background-color:#FFFFFF;
+    margin-top: 70px;
+    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(3 ,1fr);
+    
+    grid-row-gap: 30px;
+    align-items: center;
+    
+    
+}
+
+.players img{
+    width: 300px;
+    height: 256px;
+    border-radius: 10px;
+    margin-top: 10px;
+   
+    
+}
+.player-bio{
+    font-size: 12px;
+}
+.players{
+ 
+width: 330px;
+height: 474px;
+    box-shadow: 0px 0px 40px gray;
+    padding-left: 15px;
+    margin-left: 30px;
+}
+
+.sponsor{
+    margin-top: 20px;
+}
+
+.sponsor img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
+    height: 50px;
+    
+}
+h2{
+    margin-top: 20px;
+    text-align: center;
+}
+
