--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,10 +52,9 @@ border-radius: 5px;}
     align-items: center;
     display: grid;
     grid-template-columns: repeat(3 ,1fr);
-    
     grid-row-gap: 30px;
     align-items: center;
-    
+   
     
 }
 
@@ -75,13 +74,10 @@ border-radius: 5px;}
 width: 330px;
 height: 474px;
     box-shadow: 0px 0px 40px gray;
-    padding-left: 15px;
+    padding-left: 30px;
     margin-left: 30px;
 }
 
-.sponsor{
-    margin-top: 20px;
-}
 
 .sponsor img{
     display: block;
@@ -94,5 +90,12 @@ height: 474px;
 h2{
     margin-top: 20px;
     text-align: center;
+    color:teal;
+    font-size: 40px;
 }
 
+hr{
+    background-image: linear-gradient( cyan, teal);
+    height: 5px;
+    width: 70%;
+}
