--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,3 +99,24 @@ hr{
     height: 5px;
     width: 70%;
 }
+
+.footer img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+    height: 70px;
+}
+
+.footer{
+    text-align: center;
+    font-size: 30px;
+    text-align: center;
+}
+
+#text-center{
+    font-size: 12px;
+    text-align: center;
+   
+
+}
